# graphics-hw1

./: .gitignore  CMakeLists.txt
common/: shader.cpp  shader.hpp
figure/: figure.cpp
triangles/: main.cpp  triangle1.fragmentshader  triangle2.fragmentshader
